--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     -webkit-font-smoothing:antialiased;
 }
 #nav_div { position:absolute; bottom:0px; height: 45px; width: 100%;}
-#map { position:absolute; top:0px; bottom:45px; width:100%; }
+#map, #catalog-content { position:absolute; top:0px; bottom:45px; width:100%; }
 /*#footer { position:absolute; height:50px; bottom:0px; width:100%; }*/
 /*#footer h3 { text-align: center; }*/
 
@@ -16,10 +16,10 @@ body {
     font-size: 20px;
 }
 
-li > a {
+#nav_div li > a {
     text-align: center;
 }
-li {
+#nav_div li {
     margin:0px;
     min-width:15px;
     width:32.5%;
