--- a/style.css
+++ b/style.css
@@ -77,3 +77,9 @@ ul .glyphicon {
     color: black;
     font-size:20px;
 }
+
+#animation {
+    position: absolute;
+    height: 42px;
+    width: 42px;
+}
