--- a/style.css
+++ b/style.css
@@ -8,7 +8,22 @@ body {
     -webkit-font-smoothing:antialiased;
 }
 #nav_div { position:absolute; bottom:0px; height: 45px; width: 100%;}
-#map, #catalog-content { position:absolute; top:0px; bottom:45px; width:100%; }
+#map, #catalog-contet { position:absolute; top:0px; bottom:45px; width:100%; }
+
+#list_container {
+    position:absolute;
+    top:25px;
+    bottom:45px;
+    width:100%;
+    overflow: auto;
+}
+#search_text {
+    position: absolute;
+    top:0px;
+    height:25px;
+    width:100%;
+}
+
 /*#footer { position:absolute; height:50px; bottom:0px; width:100%; }*/
 /*#footer h3 { text-align: center; }*/
 
